--- a/conteudo/01_historico_e_evolucao_das_lentes.html
+++ b/conteudo/01_historico_e_evolucao_das_lentes.html
@@ -80,7 +80,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <div class="bloco1">
           <div class="container">
             <div class="acessivel print">
@@ -475,6 +475,9 @@
                 </div>
               </li>
             </ul>
+            <div class="btn-final no-print">
+              <a href="#topo"><button class="voltar">Voltar</button></a>
+            </div>
           </div>
         </div>
       </div>
