--- a/conteudo/02_composicao_e_funcao_dos_produtos.html
+++ b/conteudo/02_composicao_e_funcao_dos_produtos.html
@@ -81,7 +81,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <div class="bloco1">
           <div class="container">
             <h2 class="titulo-b1">Composição e função dos produtos, das matérias-primas, recursos físicos e anatômicos
@@ -530,6 +530,9 @@
                 Fonte: Adaptado de CooperVision (c2021)
               </figcaption>
             </figure>
+            <div class="btn-final no-print">
+              <a href="#topo"><button class="voltar">Voltar</button></a>
+            </div>
           </div>
         </div>
       </div>
