--- a/conteudo/03_processo_de_fabricacao_das_lentes.html
+++ b/conteudo/03_processo_de_fabricacao_das_lentes.html
@@ -71,7 +71,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <h2>Processo de fabricação das lentes de contato rígidas e hidrofílicas</h2>
         <p>O processo de fabricação de uma lente de contato (LC) inicia no laboratório do fabricante e tem várias etapas
           para cada tipo de material e desenho. No laboratório, também atua o técnico em óptica, que, nesse caso, é o
@@ -101,7 +101,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container container-modal">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo1" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>Fabricação de lentes de contato rígidas gás-permeáveis</h3>
@@ -160,6 +160,9 @@
                       Fonte: YouTube (2021)
                     </figcaption>
                   </figure>
+                  <div class="btn-final no-print">
+                    <a href="#topo1"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -173,7 +176,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container container-modal">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo2" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>Fabricação de lentes de contato hidrofílicas</h3>
@@ -260,6 +263,9 @@
                       Fonte: Senac EAD (2024)
                     </figcaption>
                   </figure>
+                  <div class="btn-final no-print">
+                    <a href="#topo2"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -417,6 +423,9 @@
           dos processos. Esse profissional colabora com as funções de supervisionar os setores do laboratório, operar
           equipamentos e realizar a conferência do controle de qualidade das LCs, prezando sempre pela excelência na
           entrega do produto fabricado. </p>
+        <div class="btn-final no-print">
+          <a href="#topo"><button class="voltar">Voltar</button></a>
+        </div>
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
@@ -483,7 +492,7 @@
   <script src="js/images.loader.js"></script>
   <script src="js/01.js"></script>
   <script src="js/aos.js"></script>
- 
+
   <noscript>
     <style media="screen">
       .over-loader {
