--- a/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
@@ -87,7 +87,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <div class="bloco1">
           <div class="container">
             <h2 class="titulo-b1">Técnicas de adaptação de lentes de contato e sobrerrefração </h2>
@@ -124,6 +124,10 @@
                   data-target="#modal-tecnica1"></button>
                 <button type="button" class="bt-tecnicas bt-tecnica2" data-toggle="modal"
                   data-target="#modal-tecnica2"></button>
+
+              </div>
+
+              <div class="painel painel-tecnicas2">
                 <button type="button" class="bt-tecnicas bt-tecnica3" data-toggle="modal"
                   data-target="#modal-tecnica3"></button>
                 <button type="button" class="bt-tecnicas bt-tecnica4" data-toggle="modal"
@@ -156,12 +160,25 @@
                 não dominante, adapta-se uma LC com a dioptria total de perto.</p>
               <p>Veja os passos para identificar o olho dominante do candidato: </p>
               <figure>
-                <img src="../conteudo/images/05/infografico.png" class="center-block img-responsive print borda"
+                <img src="../conteudo/images/05/infograf_img.png" class="center-block img-responsive print borda"
                   alt="Desenho mostra duas mãos realizando forma de triângulo mirando um relógio de parede em uma sala de escritório.">
-                <figcaption>Teste de dominância ocular<br>
-                  Fonte: Lynch (2021)
-                </figcaption>
               </figure>
+              <br>
+              <ol>
+                <li>Com ambos os olhos abertos, peça que o candidato alinhe uma pequena abertura triangular com as mãos
+                  em
+                  um objeto distante, como um relógio de parede, por exemplo.</li>
+                <li>Peça ao candidato que deixe o objeto o mais centralizado possível, mantendo os dois olhos abertos.
+                </li>
+                <li>Oclua o olho esquerdo (OE) do candidato e pergunte se o objeto permanece centralizado. Sem que ele
+                  mexa
+                  o triângulo para as laterais.</li>
+                <li>Repita o processo ocluindo o olho direito (OD).</li>
+              </ol>
+              <p> O olho dominante será o que apresentar a centralização do objeto no triângulo.</p>
+              <figcaption>Teste de dominância ocular<br>
+                Fonte: Lynch (2021)
+              </figcaption>
               <p>Agora, veja um exemplo de uma adaptação com o sistema de monovisão: </p>
               <div class="caixa-destaque">
                 <p><b>Prescrição: </b></p>
@@ -464,8 +481,12 @@
               <div class="painel painel-tipos">
                 <button type="button" class="bt-tipos bt-tipo1" data-toggle="modal" data-target="#modal-tipo1"></button>
                 <button type="button" class="bt-tipos bt-tipo2" data-toggle="modal" data-target="#modal-tipo2"></button>
+              </div>
+              <div class="painel painel-tipos2">
                 <button type="button" class="bt-tipos bt-tipo3" data-toggle="modal" data-target="#modal-tipo3"></button>
                 <button type="button" class="bt-tipos bt-tipo4" data-toggle="modal" data-target="#modal-tipo4"></button>
+              </div>
+              <div class="painel painel-tipos3">
                 <button type="button" class="bt-tipos bt-tipo5" data-toggle="modal" data-target="#modal-tipo5"></button>
               </div>
             </div>
@@ -474,7 +495,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo5" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>LC gelatinosa dupla face</h3>
@@ -500,6 +521,9 @@
                         de
                         provas para
                         experimentação.</p>
+                      <div class="btn-final no-print">
+                        <a href="#topo5"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -513,7 +537,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo6" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>LC RGP multiasférica</h3>
@@ -560,6 +584,9 @@
                           Fonte: Oftalsul (c2021a)
                         </figcaption>
                       </figure>
+                      <div class="btn-final no-print">
+                        <a href="#topo6"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -573,7 +600,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo7" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>LC RGP dupla face</h3>
@@ -594,12 +621,15 @@
                         provas
                         para experimentação. Veja o desenho de uma LC RGP dupla face:</p>
                       <figure>
-                        <img src="../conteudo/images/05/img06.png" class="center-block img-responsive print borda"
+                        <img src="../conteudo/images/05/img77.png" class="center-block img-responsive print borda"
                           alt="Desenho de uma LC RGP dupla face, mostrando de cima para baixo: curva-base central, curva intermediária de alinhamento e, por fim, sua curva periférica.">
                         <figcaption>LC RGP dupla face<br>
                           Fonte: Oftalsul (c2021b)
                         </figcaption>
                       </figure>
+                      <div class="btn-final no-print">
+                        <a href="#topo7"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -613,7 +643,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo8" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3> LC RGP escleral</h3>
@@ -675,6 +705,9 @@
                         caixas de
                         provas
                         para experimentação.</p>
+                      <div class="btn-final no-print">
+                        <a href="#topo8"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -688,7 +721,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo9" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>Sistema <i>piggyback</i></h3>
@@ -719,6 +752,9 @@
                         candidato,
                         além de
                         diminuir o índice de oxigenação por ter dois materiais sobrepostos na superfície corneana.</p>
+                      <div class="btn-final no-print">
+                        <a href="#topo9"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -795,7 +831,7 @@
                 provas
                 para experimentação. Veja o desenho de uma LC RGP dupla face:</p>
               <figure>
-                <img src="../conteudo/images/05/img06.png" class="center-block img-responsive print borda"
+                <img src="../conteudo/images/05/img77.png" class="center-block img-responsive print borda"
                   alt="Desenho de uma LC RGP dupla face, mostrando de cima para baixo: curva-base central, curva intermediária de alinhamento e, por fim, sua curva periférica.">
                 <figcaption>LC RGP dupla face<br>
                   Fonte: Oftalsul (c2021b)
@@ -1024,7 +1060,8 @@
               pós-refrativa e pós-transplante de córnea. Ambas são consideradas adaptações bem complexas e especiais,
               devendo o profissional técnico em óptica especialista em LC estar informado das técnicas e dos desenhos de
               LC, a fim de prestar auxílio ao oftalmologista.</p>
-            <p>Clique ou toque para visualizar as técnicas de adaptação para candidatos pós-cirúrgicos:</p>
+            <p class="no-print">Clique ou toque para visualizar as técnicas de adaptação para candidatos pós-cirúrgicos:
+            </p>
             <div class="no-print" aria-hidden="true">
               <div class="painel painel-pos">
                 <button type="button" class="bt-pos bt-pos1" data-toggle="modal" data-target="#modal-pos1"></button>
@@ -1036,7 +1073,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo10" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>Adaptação de LC para pós-cirurgia refrativa</h3>
@@ -1059,6 +1096,9 @@
                           Fonte: Oftalsul (c2021c)
                         </figcaption>
                       </figure>
+                      <div class="btn-final no-print">
+                        <a href="#topo10"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -1072,7 +1112,7 @@
                 <div class="modal-content no-print">
                   <div class="modal-body">
                     <div class="container">
-                      <div class="modal-header" style="padding-top: 30px;">
+                      <div class="modal-header" id="topo11" style="padding-top: 30px;">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       </div>
                       <h3>Adaptação de LC para pós-transplante de córnea</h3>
@@ -1113,6 +1153,9 @@
                       <p>As orientações para adaptação devem ser seguidas conforme o guia técnico de cada fabricante, de
                         acordo com a LC escolhida, e requer disponibilidade de caixas de provas para a realização do
                         teste.</p>
+                      <div class="btn-final no-print">
+                        <a href="#topo11"><button class="voltar">Voltar</button></a>
+                      </div>
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -1334,6 +1377,9 @@
               preparado e inteirado sobre a variedade de modelos e desenhos disponibilizados pelos fabricantes em seus
               catálogos, seguindo fielmente suas orientações, além de ter uma boa seleção de caixas de provas e manter
               um bom relacionamento com especialistas. </p>
+            <div class="btn-final no-print">
+              <a href="#topo"><button class="voltar">Voltar</button></a>
+            </div>
           </div>
         </div>
         <div class="modal modal-100 fade" id="modal-tecnica1" aria-hidden="false">
@@ -1341,7 +1387,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo1" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>LC para longe e óculos para perto </h3>
@@ -1363,6 +1409,9 @@
                     adaptação de LC justamente para estarem livres dos óculos durante o uso da lente, portanto
                     acabam não aprovando esse
                     recurso.</p>
+                  <div class="btn-final no-print">
+                    <a href="#topo1"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1376,7 +1425,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo2" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>Monovisão </h3>
@@ -1387,6 +1436,7 @@
                   <figure>
                     <img src="../conteudo/images/05/infografico.png" class="center-block img-responsive print borda"
                       alt="Desenho mostra duas mãos realizando forma de triângulo mirando um relógio de parede em uma sala de escritório.">
+                    <p>O olho dominante será o que apresentar a centralização do objeto no triângulo. </p>
                     <figcaption>Teste de dominância ocular<br>
                       Fonte: Lynch (2021)
                     </figcaption>
@@ -1416,6 +1466,9 @@
                   <p>O tempo de adaptação com o sistema de monovisão costuma durar de 15 a 30 dias, com uso diário
                     de pelo menos quatro
                     horas.</p>
+                  <div class="btn-final no-print">
+                    <a href="#topo2"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1429,7 +1482,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo3" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>LCs multifocais </h3>
@@ -1495,6 +1548,9 @@
                       Fonte: Adaptado de Salvestrini (s. d.)
                     </figcaption>
                   </figure>
+                  <div class="btn-final no-print">
+                    <a href="#topo3"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1508,7 +1564,7 @@
             <div class="modal-content no-print">
               <div class="modal-body">
                 <div class="container">
-                  <div class="modal-header" style="padding-top: 30px;">
+                  <div class="modal-header" id="topo4" style="padding-top: 30px;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <h3>Monovisão modificada </h3>
@@ -1534,6 +1590,9 @@
                   <p>Na técnica de monovisão modificada, também será avaliada a satisfação da visão do candidato de
                     longe e de perto e
                     poderão ser realizadas alterações da LC de teste.</p>
+                  <div class="btn-final no-print">
+                    <a href="#topo4"><button class="voltar">Voltar</button></a>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
