--- a/conteudo/06_descarte_de_residuos.html
+++ b/conteudo/06_descarte_de_residuos.html
@@ -77,7 +77,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <h2>Descarte de resíduos do processo de adaptação de lentes de contato: tipos de resíduos gerados; impactos
           ambientais causados por descarte incorreto de resíduos; sustentabilidade</h2>
         <div class="no-print" aria-hidden="true">
@@ -1140,7 +1140,7 @@
               <li>Lavar frequentemente as mãos com água e sabão, por meio de técnica adequada</li>
             </ul>
           </div>
-       
+
           <figure>
             <img src="../conteudo/images/06/img07.png" class="center-block img-responsive print borda"
               alt="Figura mostra seis desenhos ensinando cada passo da lavagem de mãos. Da esquerda para a direita, o primeiro mostra as duas mãos abertas com espuma de sabão, o segundo mostra a mão direita esfregando a palma esquerda, o terceiro mostra a mão direita esfregando entre os dedos da mão esquerda, o quarto mostra a mão esquerda esfregando o polegar direito, o quinto mostra a mão direita esfregando o dorso da mão esquerda e o sexto mostra a mão esquerda lavando o punho direito.">
@@ -1344,6 +1344,9 @@
             medidas corretas de sustentabilidade sejam tomadas, ao educar atuais e futuros usuários de LC, para que
             realizem um descarte consciente de suas lentes, colaborando, dessa forma, com a preservação do meio
             ambiente. </p>
+        </div>
+        <div class="btn-final no-print">
+          <a href="#topo"><button class="voltar">Voltar</button></a>
         </div>
       </div>
     </section>
