--- a/conteudo/07_referencias.html
+++ b/conteudo/07_referencias.html
@@ -69,7 +69,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina">
+      <div class="pagina" id="topo">
         <h2>Referências</h2>
         <h3>Histórico e evolução das lentes de contato: origem e principais fatos </h3>
         <p>ADOLF Fick. <b>EcuRed</b>, [s. d.]. Disponível em: https://www.ecured.cu/Adolf_Fick. Acesso em: 28 mar.
@@ -275,6 +275,9 @@
           https://biblioteca.cofen.gov.br/videos/como-lavar-as-maos-coronavirus-1/. Acesso em: 4 abr. 2024.</p>
         <p>TUDO QUE você precisa saber sobre lentes de contato. <b>Acuvue</b>, c2024. Disponível em:
           https://www.acuvue.com.br/sustentabilidade/lidando-com-desperdicio. Acesso em: 4 abr. 2024.</p>
+        <div class="btn-final no-print">
+          <a href="#topo"><button class="voltar">Voltar</button></a>
+        </div>
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
